tests/ui/raw.stderr
error: `#[structopt(raw(...))` attributes are removed in structopt 0.3, they are replaced with raw methods
  --> $DIR/raw.rs:13:17
   |
13 |     #[structopt(raw(case_insensitive = "true"))]
   |                 ^^^

error: `#[structopt(raw(...))` attributes are removed in structopt 0.3, they are replaced with raw methods
  --> $DIR/raw.rs:19:17
   |
19 |     #[structopt(raw(requires_if = r#""one", "two""#))]
   |                 ^^^
